<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dell.smartcitytraveller_app.LoginActivity">

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/GridLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_register"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
            <!--android:columnCount="4"
            android:useDefaultMargins="true" >-->

            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginLeft="110dp"
                android:text="@string/login"
                android:textSize="50dip"
                android:textColor="@color/input_login"/>

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_name"
                android:padding="10dp"
                android:inputType="textCapWords"
                android:background="@color/input_register_bg"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />
            <!-- android:layout_column="1"
            android:layout_gravity="right"
            android:layout_row="1"
            android:layout_marginTop="20dp"-->


            <!--<EditText
                android:layout_marginTop="20dp"
                android:id="@+id/usertext"
                android:layout_column="1"
                android:layout_columnSpan="2"
                android:layout_row="1"
                android:layout_below="@+id/username"
                android:ems="10" />-->

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:hint="@string/hint_password"
                android:background="@color/input_register_bg"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint"
                />


            <!--<EditText
                android:layout_marginTop="20dp"
                android:id="@+id/passwordtext"
                android:layout_column="1"
                android:layout_columnSpan="2"
                android:layout_row="2"
                android:inputType="textPassword"
                android:ems="10" />-->

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="#4c86ea"
                android:text="@string/btn_login"
                android:textColor="@color/white" />
            <!--android:layout_width="200dp"
            android:layout_column="1"
            android:layout_row="4"
            android:layout_marginTop="20dp"-->


            <Button
                android:id="@+id/btnForgotpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="#4c86ea"
                android:text="@string/btn_forgotpassword"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="#4c86ea"
                android:text="@string/btn_register"
                android:textColor="@color/white" />

        </GridLayout>

    </GridLayout>


</android.support.constraint.ConstraintLayout>
